# Rust

./: .gitignore
.cargo/: config.toml
01 raytracer/src/: main.rs
01_raytracer/: Cargo.toml
01_raytracer/src/: main.rs
02_optlt/: Cargo.toml
02_optlt/src/: main.rs
Crates/: check_updates.bat
Crates/Logging/: Cargo.toml
Crates/MyGlob/: Cargo.toml  Myglob search.docx  Standard options for MyGlob.docx  ~$andard options for MyGlob.docx  ~WRL1839.tmp
Crates/MyMarkup/: Cargo.toml  Specs.txt  model1.txt  model2.txt
Crates/PVMarkup/: Cargo.toml  Specs.txt
Crates/TextAutoDecode/: Cargo.toml  TextAutoDecode.docx
Learning/: all.bat  buildall.bat  cleanall.bat  clippyall.bat  fmtall.bat  upcatevscodeall.bat
Learning/l01_borrowing/: Cargo.toml
Learning/l02_slices/: Cargo.toml
Learning/l03_struct/: Cargo.toml
Learning/l04_enums/: Cargo.toml
Learning/l05_roman1/: Cargo.toml
Learning/l06_modules/: Cargo.toml
Learning/l07_restaurant/: Cargo.toml
Learning/l08_collections/: Cargo.toml
Learning/l09_panic/: Cargo.toml
Learning/l10_generics/: Cargo.toml
Learning/l11_traits/: Cargo.toml
Learning/l11a_traits_1/: Cargo.toml
Learning/l11b_traits_2/: Cargo.toml
Learning/l12_lifetimes/: Cargo.toml
Learning/l13_tests/: Cargo.toml
Learning/l14_grep/: Cargo.toml
Learning/l15_closures/: Cargo.toml
Learning/l16_iterators/: Cargo.toml
Learning/l17_box/: Cargo.toml
Learning/l18_rc/: Cargo.toml
Learning/l19_vstring/: Cargo.toml  vstring.xlsx
Learning/l20_glyph2/: Cargo.toml
Learning/l21_checkutf8/: Cargo.toml
Learning/l21_fs_explorer/: Cargo.toml
Learning/l22_format/: Cargo.toml
Learning/l23_conversions/: Cargo.toml
Learning/l23_from_into/: Cargo.toml
Learning/l24_clone_copy/: Cargo.toml
Learning/l25_closures/: Cargo.toml
Learning/l26_file_hierarchy/: build.bat  clean.bat  my.rs  rary.rs  run.bat  split.rs
Learning/l27_cfg/: Cargo.toml  build.rs
Learning/l28_associated_types/: Cargo.toml
Learning/l29_phantoms/: Cargo.toml
Learning/l30_phantom_units/: Cargo.toml
Learning/l31_ref_to_temp/: Cargo.toml
Learning/l32_symlink_junction/: Cargo.toml
Learning/l32a_symlink_junction/: Cargo.toml
Learning/l32b_hardlink/: Cargo.toml
Learning/l32c_Streams/: Cargo.toml
Learning/l33_local_remote/: Cargo.toml
Learning/l34_operators_overloading/: Cargo.toml
Learning/l35_impl_trait/: Cargo.toml
Learning/l36_break_path/: Cargo.toml
Learning/l37_read_lines/: Cargo.toml
Learning/l38_counter/: Cargo.toml
Learning/l39_alphanum_filter/: Cargo.toml
Learning/l40_books_dups/: Cargo.toml
Learning/l41_music_dups/: Cargo.toml
Learning/l41_music_dups/src/: main.rs
Learning/l42_dups_bd/: Cargo.toml
Learning/l43_supertraits/: Cargo.toml
Learning/l44_macros/: Cargo.toml
Learning/l45_option/: Cargo.toml
Learning/l46_option_2/: Cargo.toml
Learning/l46_option_full/: Cargo.toml
Learning/l47_check_dates/: Cargo.toml
Learning/l47_check_dates/src/: main.rs
Learning/l47_check_source_dates/: Cargo.toml
Learning/l47_checkdates/: Cargo.toml
Learning/l47_checkdates/src/: logging.rs  main.rs
Learning/l48_clean_settings_json/: Cargo.toml
Learning/l52_arc/: Cargo.toml
Learning/l62_check_solutions/: Cargo.toml  run.bat
Learning/l62_check_solutions/src/: main.rs  tests.rs
R01_hello_world/: Cargo.toml
R02_guessing_game/: Makefile
R03_Structures/: Cargo.toml
R04_references/: Cargo.toml
R05_struct/: Cargo.toml
R06_enum/: Cargo.toml
R08_collections/: Cargo.toml
R12_tests/: Cargo.toml
R13_minigrep/: Cargo.toml
RUtils/: check_updates.bat  cleanall.bat  clearall.sh  publishall.bat  publishall.sh
RUtils/RCheckFiles/: Cargo.toml  build.rs  fixed.yaml  fixed1.yaml  publish.bat  publish.ps1
RUtils/RCheckFiles/src/: logging.rs  main.rs  options.rs  tests.rs
RUtils/RFind/: Cargo.toml  build.rs  publish.bat  publish.ps1  publish.sh
RUtils/RFind/src/: actions.rs  command_to_run.rs  fa_streams.rs  filters.rs  logging.rs  main.rs  mygloboptions.rs  options.rs  tests.rs
RUtils/RGrep/: Cargo.toml  build.rs  publish.bat  publish.ps1  publish.sh
RUtils/RGrep/src/: decode_encoding.rs  grepiterator.rs  main.rs  options.rs  tests.rs
RUtils/RNormalizeDates/: Cargo.toml  build.rs  publish.bat  publish.ps1
RUtils/RNormalizeDates/src/: decode_encoding.rs  devdata.rs  logging.rs  main.rs  options.rs  re.rs  tests.rs
RUtils/RNormalizeDates/src/tests/: mod.rs  tests_helpers.rs  tests_re.rs  tests_transformations.rs
RUtils/RSegment/: Cargo.toml
RUtils/RSegment/src/: main.rs
RUtils/RTree/: Cargo.toml  build.rs  publish.bat  publish.ps1  publish.sh
RUtils/RTree/src/: main.rs  options.rs
RUtils/Rcat/: Cargo.toml  build.rs  publish.bat  publish.ps1  publish.sh
RUtils/Rcat/src/: main.rs  options.rs  tests.rs
RUtils/Rdir/: Cargo.toml  Rdir command design.docx  build.rs  publish.bat  publish.ps1  publish.sh
RUtils/Rdir/src/: fa_attributes.rs  fa_dates.rs  fa_hardlinks.rs  fa_names.rs  fa_owner.rs  fa_reparsepoints.rs  fa_size.rs  fa_streams.rs  main.rs  options.rs  tests.rs
RUtils/Rdups/: Cargo.toml  build.rs  publish.bat  publish.ps1  publish.sh
RUtils/Rdups/src/: main.rs  options.rs  tests.rs
RUtils/Recycle/: Cargo.toml  build.rs  publish.bat  publish.ps1
RUtils/Recycle/src/: drive_type.rs  main.rs  options.rs  reparse.rs  tests.rs
RUtils/Rtt/: Cargo.toml  build.rs  clean.bat  publish.bat  publish.ps1  publish.sh  specs.txt
RUtils/Rtt/src/: MainWindow.rs  main.rs  options.rs  tests.rs
RUtils/Runiq/: Cargo.toml  build.rs  f1.txt  publish.bat  publish.ps1  publish.sh
RUtils/Runiq/src/: main.rs  options.rs  tests.rs
RUtils/Rwc/: Cargo.toml  build.rs  publish.ps1  publish.sh
RUtils/Rwc/src/: main.rs  options.rs  tests.rs
RUtils/Rxargs/: 123.txt  Cargo.toml  Rxargs command design.docx  publish.bat  publish.ps1  publish.sh
RUtils/Rxargs/src/: command_to_run.rs  main.rs  options.rs  tests.rs
The_Book_2024/: buildall.bat  cleanall.bat  clippyall.bat  upcatevscodeall.bat
The_Book_2024/hello_macro_derive/: Cargo.toml
The_Book_2024/hello_macro_derive/src/: lib.rs
raytracer/: Cargo.toml
(+325 files in other folders)
