[package]
name = "l47_check_source_dates"
description = "Check dates in source files headers"
version = "1.3.0"
authors = ["Pierre Violent"]
edition = "2024"

[dependencies]
myglob = { path = "../../Crates/MyGlob" }
textautodecode = { path = "../../Crates/TextAutoDecode" }
logging = { path = "../../Crates/Logging" }
regex = "1.11.1"
