[package]
name = "l47_checkdates"
description = "Check dates in source files headers"
version = "1.0.0"
authors = ["Pierre Violent"]
edition = "2024"

[dependencies]
myglob = { path = "../../Crates/MyGlob" }
chrono = "0.4.40"
termcolor = "1.4.1"
regex = "1.11.1"
unicode-normalization = "0.1.24"
encoding_rs = "0.8.35"
