[package]
name = "l47_checkdates"
description = "Check dates in source files headers"
version = "1.1.0"
authors = ["Pierre Violent"]
edition = "2024"

[dependencies]
myglob = { path = "../../Crates/MyGlob" }
textautodecode = { path = "../../Crates/TextAutoDecode" }
chrono = "0.4.40"
regex = "1.11.1"
unicode-normalization = "0.1.24"
colored = "3.0.0"
