[package]
name = "rcheckfiles"
description = "Detect and optionally fix incorrect filenames"
version = "2.5.0"
authors = ["Pierre Violent"]
edition = "2024"

[dependencies]
mymarkup = { path = "../../Crates/MyMarkup" }
logging = { path = "../../Crates/Logging" }
getopt = "1.1.7"
regex = "1.12.2"
serde = { version = "1.0.227", features = ["derive"] }
serde_yaml = "0.9.34"
unicode-normalization = "0.1.24"

[build-dependencies]
toml = "0.8.23"
