[package]
name = "rcheckfiles"
description = "Detect and optionally fix incorrect filenames"
version = "3.4.0"
authors = ["Pierre Violent"]
edition = "2024"

[package.metadata]
copyright = "Copyright ©2025-2026 Pierre Violent"

[dependencies]
mymarkup = { path = "../../Crates/MyMarkup" }
logging = { path = "../../Crates/Logging" }
getopt = "1.1.7"
regex = "1.12.2"
serde = { version = "1.0.227", features = ["derive"] }
serde_yaml = "0.9.34"
unicode-normalization = "0.1.24"
unicode-ident = "1.0.12"
unicode-script = "0.5.7"

[build-dependencies]
toml = "1.0.1"
winres = "0.1.12"
cargo_metadata = "0.23.1"
