[package]
name = "rfind"
description = "Searching files in Rust"
version = "2.4.1"
authors = ["Pierre Violent"]
edition = "2024"

[dependencies]
myglob = { path = "../../Crates/MyGlob" }
mymarkup = { path = "../../Crates/MyMarkup" }
logging = { path = "../../Crates/Logging" }
trash = "5.2.2"
chrono = "0.4.40"
num-format = "0.4.4"
windows = { version = "0.62", features = ["Win32_Foundation", "Win32_Storage_FileSystem", "Win32_System_IO", "Win32_UI_Shell"] }

[build-dependencies]
toml = "0.9"
