[package]
name = "rfind"
description = "Searching files in Rust"
version = "3.1.0"
authors = ["Pierre Violent"]
edition = "2024"

[package.metadata]
copyright = "Copyright ©2025-2026 Pierre Violent"

[dependencies]
myglob = { path = "../../Crates/MyGlob" }
mymarkup = { path = "../../Crates/MyMarkup" }
logging = { path = "../../Crates/Logging" }
trash = "5.2.2"
chrono = "0.4.40"
num-format = "0.4.4"
windows = { version = "0.62", features = ["Win32_Foundation", "Win32_Storage_FileSystem", "Win32_System_IO", "Win32_UI_Shell"] }

[build-dependencies]
toml = "1.0.1"
winres = "0.1.12"
cargo_metadata = "0.23.1"

# For testing
[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
