[package]
name = "rgrep"
description = "Basic grep project in Rust"
version = "1.7.0"
authors = ["Pierre Violent"]
edition = "2024"

[dependencies]
myglob = { path = "../../Crates/MyGlob" }
textautodecode = { path = "../../Crates/TextAutoDecode" }
mymarkup = { path = "../../Crates/MyMarkup" }
getopt = "1.1.7"
regex = "1.11.1"
colored = "3.0.0"
terminal_size = "0.4.2"
atty = "0.2.14"
