[package]
name = "rgrep"
description = "Grep utility in Rust"
version = "1.8.3"
authors = ["Pierre Violent"]
edition = "2024"

[dependencies]
myglob = { path = "../../Crates/MyGlob" }
textautodecode = { path = "../../Crates/TextAutoDecode" }
mymarkup = { path = "../../Crates/MyMarkup" }
getopt = "1.1.7"
regex = "1.11.1"
colored = "3.0.0"
# atty = "0.2.14"

[build-dependencies]
toml = "0.9"
