[package]
name = "rnormalizedates"
description = "Rust version of NormalizeDates, Normalizes dates in filenames, replace 'January 2020' by '2020-01'"
version = "1.1.5"
authors = ["Pierre Violent"]
edition = "2024"

[dependencies]
myglob = { path = "../../Crates/MyGlob" }
mymarkup = { path = "../../Crates/MyMarkup" }
logging = { path = "../../Crates/Logging" }
getopt = "1.1.7"
regex = "1.11.1"
unicode-normalization = "0.1.24"

[build-dependencies]
toml = "0.9"
