[package]
name = "rnormalizedates"
description = "Normalizes dates in filenames, replace 'January 2020' by '2020-01'"
version = "1.2.0"
authors = ["Pierre Violent"]
edition = "2024"

[package.metadata]
copyright = "Copyright ©2025-2026 Pierre Violent"

[dependencies]
myglob = { path = "../../Crates/MyGlob" }
mymarkup = { path = "../../Crates/MyMarkup" }
logging = { path = "../../Crates/Logging" }
getopt = "1.1.7"
regex = "1.11.1"
unicode-normalization = "0.1.24"

[build-dependencies]
toml = "1.0.1"
winres = "0.1.12"
cargo_metadata = "0.23.1"
