[package]
name = "rsegment"
description = "Extract segment from filename"
version = "1.2.0"
authors = ["Pierre Violent"]
edition = "2024"

[dependencies]
myglob = { path = "../../Crates/MyGlob" }
chrono = "0.4.40"
termcolor = "1.4.1"
terminal_size = "0.4.2"
regex = "1.11.1"
unicode-normalization = "0.1.24"
