[package]
name = "rtree"
description = "Visual directory structure in Rust"
version = "1.1.0"
authors = ["Pierre Violent"]
edition = "2024"

[dependencies]
windows = { version = "0.58.0", features = ["Win32_Foundation", "Win32_System_LibraryLoader", "Win32_UI_Shell"] }
mymarkup = { path = "../../Crates/MyMarkup" }
getopt = "1.1.7"
