[package]
name = "rtree"
description = "Visual directory structure in Rust"
version = "1.2.1"
authors = ["Pierre Violent"]
edition = "2024"

[dependencies]
mymarkup = { path = "../../Crates/MyMarkup" }
getopt = "1.1.7"
windows = { version = "0.62", features = ["Win32_Foundation", "Win32_System_LibraryLoader", "Win32_UI_Shell"] }

[build-dependencies]
toml = "0.9"
