[package]
name = "rtree"
description = "Visual directory structure in Rust"
version = "1.3.0"
authors = ["Pierre Violent"]
edition = "2024"

[package.metadata]
copyright = "Copyright ©2025-2026 Pierre Violent"

[dependencies]
mymarkup = { path = "../../Crates/MyMarkup" }
getopt = "1.1.7"
windows = { version = "0.62", features = ["Win32_Foundation", "Win32_System_LibraryLoader", "Win32_UI_Shell"] }

[build-dependencies]
toml = "1.0.1"
winres = "0.1.12"
cargo_metadata = "0.23.1"
