[package]
name = "rcat"
description = "Rust version of cat utility, concatenate files and print on the standard output"
version = "2.0.0"
authors = ["Pierre Violent"]
edition = "2024"

[dependencies]
myglob = { path = "../../Crates/MyGlob" }
mymarkup = { path = "../../Crates/MyMarkup" }
getopts = "0.2.24"

[build-dependencies]
toml = "0.9"
