[package]
name = "rdups"
description = "Rust utility to find duplicate files (same content)"
version = "1.0.1"
authors = ["Pierre Violent"]
edition = "2024"

[dependencies]
myglob = { path = "../../Crates/MyGlob" }
mymarkup = { path = "../../Crates/MyMarkup" }
getopt = "1.1.7"

[build-dependencies]
toml = "0.9"
