[package]
name = "rdups"
description = "Rust utility to find duplicate files (same content)"
version = "1.1.0"
authors = ["Pierre Violent"]
edition = "2024"

[package.metadata]
copyright = "Copyright ©2025-2026 Pierre Violent"

[dependencies]
myglob = { path = "../../Crates/MyGlob" }
mymarkup = { path = "../../Crates/MyMarkup" }
getopt = "1.1.7"

[build-dependencies]
toml = "1.0.1"
winres = "0.1.12"
cargo_metadata = "0.23.1"
