[package]
name = "recycle"
description = "Delete files and directories to trash"
version = "1.1.4"
authors = ["Pierre Violent"]
edition = "2024"

[dependencies]
myglob = { path = "../../Crates/MyGlob" }
mymarkup = { path = "../../Crates/MyMarkup" }
logging = { path = "../../Crates/Logging" }
getopt = "1.1.7"
trash = "5.2.2"
windows = {version= "0.61.1", features = ["Win32_Foundation", "Win32_Storage_FileSystem", "Win32_System_IO"]}
