[package]
name = "recycle"
description = "Delete files and directories to trash"
version = "1.2.0"
authors = ["Pierre Violent"]
edition = "2024"

[package.metadata]
copyright = "Copyright ©2025-2026 Pierre Violent"

[dependencies]
myglob = { path = "../../Crates/MyGlob" }
mymarkup = { path = "../../Crates/MyMarkup" }
logging = { path = "../../Crates/Logging" }
getopt = "1.1"
trash = "5.2"
windows = {version= "0.62", features = ["Win32_Foundation", "Win32_Storage_FileSystem", "Win32_System_IO"]}

[build-dependencies]
toml = "1.0.1"
winres = "0.1.12"
cargo_metadata = "0.23.1"
