[package]
name = "runiq"
description = "Rust version of uniq, filter repeated lines"
version = "1.1.0"
authors = ["Pierre Violent"]
edition = "2024"

[package.metadata]
copyright = "Copyright ©2025-2026 Pierre Violent"

[dependencies]
mymarkup = { path = "../../Crates/MyMarkup" }
getopt = "1.1.7"
indexmap = "2.12.0"

[build-dependencies]
toml = "1.0.1"
winres = "0.1.12"
cargo_metadata = "0.23.1"
