[package]
name = "rwc"
description = "Word Count utility in Rust"
version = "1.2.3"
authors = ["Pierre Violent"]
edition = "2024"

[dependencies]
myglob = { path = "../../Crates/MyGlob" }
textautodecode = { path = "../../Crates/TextAutoDecode" }
mymarkup = { path = "../../Crates/MyMarkup" }
getopt = "1.1.7"

[build-dependencies]
toml = "0.8.23"
