[package]
name = "rwc"
description = "Word Count utility in Rust"
version = "1.2.4"
authors = ["Pierre Violent"]
edition = "2024"

[dependencies]
myglob = { path = "../../Crates/MyGlob" }
textautodecode = { path = "../../Crates/TextAutoDecode" }
mymarkup = { path = "../../Crates/MyMarkup" }
getopt = "1.1.7"

[build-dependencies]
toml = "1.0.1"
