[package]
name = "rxargs"
description = "Equivalent of xargs in Rust"
version = "1.0.1"
authors = ["Pierre Violent"]
edition = "2024"

[dependencies]
mymarkup = { path = "../../Crates/MyMarkup" }
textautodecode = { path = "../../Crates/TextAutoDecode" }
getopt = "1.1.7"

[build-dependencies]
toml = "1.0.1"
