[package]
name = "hello_macro_derive"
version = "0.1.0"
authors = ["Neil Kistner <neil.kistner@gmail.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
quote = "1.0.40"
syn = "2.0.100"
#syn = "0.14.4"
#quote = "0.6.3"
